--- a/projects/web/src/app/admin/users/list/list.component.html
+++ b/projects/web/src/app/admin/users/list/list.component.html
@@ -4,8 +4,8 @@
     <div class="col-2">
       <nz-card nzTitle="组织单元" [nzExtra]="orgUnitExtraTpl" [nzBodyStyle]="{ padding: '0.25rem' }">
         <ng-template #orgUnitExtraTpl>
-          <button class="px-2" type="button" nz-button nzType="default" (click)="loadOrganizeUnit()">
-            <svg-icon iconPath="bi/arrow-repeat" />
+          <button type="button" nz-button nzType="default" (click)="loadOrganizeUnit()">
+            <nz-icon nzType="sync" />
           </button>
         </ng-template>
         @if (organizeUnitSvc.treeNodes | async; as treeNodes) {
@@ -28,11 +28,11 @@
                   @if (vm.searchModel.userName) {
                     <button class="px-2" type="button" nz-button nzType="default"
                       (click)="cleanUserSearch()">
-                      <svg-icon iconPath="bi/x" />
+                      <nz-icon nzType="close" />
                     </button>
                   }
                   <button class="px-2" type="button" nz-button nzType="default" nzSearch (click)="vm.search()">
-                    <svg-icon iconPath="bi/search" />
+                    <nz-icon nzType="search" />
                   </button>
                 </ng-template>
               </nz-input-group>
@@ -56,11 +56,11 @@
                 @if (info.privileges['app_users.create']) {
                   <button type="button" nz-button nzType="primary"
                     (click)="showDetail('0', true)">
-                    <svg-icon class="me-1" iconPath="bi/plus" /> 新建用户
+                    <nz-icon class="me-1" nzType="plus" /> 新建用户
                   </button>
                 }
                 <button type="button" nz-button nzType="default" (click)="loadData({})">
-                  <svg-icon class="me-1" iconPath="bi/arrow-repeat" /> 刷新
+                  <nz-icon class="me-1" nzType="sync" /> 刷新
                 </button>
               </nz-space-compact>
             </nz-space>
@@ -100,7 +100,7 @@
                 @if (isLockout(item)) {
                   <span class="clickable" nz-tooltip="该用户已经被锁定！" nzTooltipPlacement="right">
                     {{getFullname(item)}}
-                    <svg-icon class="text-danger clickable" iconPath="bi/ban" />
+                    <nz-icon class="text-danger clickable" nzType="bi:ban" />
                   </span>
                 }
                 @else {
@@ -117,50 +117,50 @@
                     <button class="px-1" type="button" nz-button
                       nz-tooltip="详情" nzTooltipPlacement="top"
                       (click)="showDetail(item.id, false)">
-                      <svg-icon iconPath="bi/info-square" />
+                      <nz-icon nzType="bi:info-square" />
                     </button>
                   }
                   @if (canViewGears()) {
                     <button class="px-1" type="button" nz-button
                       nz-tooltip="更多操作" nzTooltipPlacement="top"
                       nz-dropdown nzTrigger="click" [nzDropdownMenu]="userMenuTpl">
-                      <svg-icon iconPath="bi/three-dots" />
+                      <nz-icon nzType="bi:three-dots" />
                     </button>
                   }
                   <nz-dropdown-menu #userMenuTpl="nzDropdownMenu">
                     <div nz-menu>
                       @if (info.privileges['app_users.update']) {
                         <li nz-menu-item (click)="showDetail(item.id, true)">
-                          <svg-icon class="me-2" iconPath="bi/pencil-square" /> 编辑
+                          <nz-icon nzType="bi:pencil-square" /> 编辑
                         </li>
                       }
                       @if (isLockout(item)) {
                         @if (info.privileges['app_users.unlock']) {
                             <li nz-menu-item (click)="vm.unlockUser(item.id)">
-                              <svg-icon class="me-2" iconPath="bi/unlock" /> 解锁
+                              <nz-icon nzType="bi:unlock" /> 解锁
                           </li>
                         }
                       }
                       @else {
                         @if (info.privileges['app_users.lock']) {
                           <li nz-menu-item (click)="showLock(item)">
-                            <svg-icon class="me-2" iconPath="bi/lock" /> 锁定
+                            <nz-icon nzType="bi:lock" /> 锁定
                           </li>
                         }
                       }
                       @if (info.privileges['app_users.reset_pass']) {
                         <li nz-menu-item (click)="showPassword(item)">
-                          <svg-icon class="me-2" iconPath="bi/key" /> 重置密码
+                          <nz-icon nzType="bi:key" /> 重置密码
                         </li>
                       }
                       @if (info.privileges['app_users.read_user_roles']) {
                         <li nz-menu-item (click)="showRoles(item)">
-                          <svg-icon class="me-2" iconPath="bi/shield-check" /> 角色
+                          <nz-icon nzType="bi:shield-check" /> 角色
                         </li>
                       }
                       @if (info.privileges['app_users.delete']) {
                         <li nz-menu-item (click)="delete(item.id)">
-                          <svg-icon class="me-2" iconPath="bi/trash" /> 删除
+                          <nz-icon nzType="bi:trash" /> 删除
                         </li>
                       }
                     </div>
