--- a/projects/web/src/app/admin/users/password/password.component.html
+++ b/projects/web/src/app/admin/users/password/password.component.html
@@ -1,15 +1,15 @@
 @let user = account.current();
 <nz-card class="ant-card-data-detail m-0" [nzTitle]="title" [nzExtra]="toolsTpl">
   <ng-template #toolsTpl>
-    <nz-space-compact>
-      @if (user.privileges['app_users.reset_pass']) {
+    <nz-space-compact nzSize="small">
+      @if (user.privileges['app_users.reset_pass'] && params.editable) {
         <button type="button" type="button" nz-button nzType="primary"
           [disabled]="!form.valid" (click)="save()">
-          <svg-icon class="me-1" iconPath="bi/check" /> 保存
+          <nz-icon nzType="check" /> 保存
         </button>
       }
       <button type="button" nz-button nzType="default" (click)="cancel()">
-        <svg-icon class="me-1" iconPath="bi/x" /> 取消
+        <nz-icon nzType="close" /> 取消
       </button>
     </nz-space-compact>
   </ng-template>
