--- a/projects/web/src/app/common/attachment-list/attachment-list.component.html
+++ b/projects/web/src/app/common/attachment-list/attachment-list.component.html
@@ -2,9 +2,9 @@
   [nzFooter]="listFooter()">
   <nz-list-header class="d-flex">
     {{listHeader()}}
-    <button class="ms-auto px-1" type="button" nz-button nzSize="small"
+    <button class="ms-auto" type="button" nz-button nzSize="small"
       (click)="loadAttachments()">
-      <svg-icon iconPath="bi/arrow-repeat" />
+      <nz-icon nzType="sync" />
     </button>
   </nz-list-header>
   @let showDel = accountService.current().privileges['app_attachments.delete'] && allowDelete();
@@ -12,9 +12,9 @@
     <nz-list-item class="d-flex">
       {{att.fileName}}
       @if (showDel) {
-        <button class="ms-auto px-1" type="button" nz-button nzSize="small"
+        <button class="ms-auto" type="button" nz-button nzSize="small"
           (click)="deleteAttachment(att.id)" nz-tooltip="删除">
-          <svg-icon iconPath="bi/x" />
+          <nz-icon nzType="close" />
         </button>
       }
     </nz-list-item>
