refactor to use antd modules

--- a/projects/web/src/app/admin/nav-items/list/list.component.html
+++ b/projects/web/src/app/admin/nav-items/list/list.component.html
@@ -49,7 +49,7 @@
                 <td class='text-start'>{{item.tooltip}}</td>
                 <td class='text-start'>
                   @if (item.icon) {
-                    <nz-icon iconClass="bi" [nzType]="toNzIconType(item.icon)" />
+                    <nz-icon iconClass="bi" [nzType]="ui.toNzIconType(item.icon)" />
                   }
                   {{item.icon}}</td>
                 <td class='text-start'>{{item.url}}</td>
