--- a/projects/web/src/app/common/json-data-upload/json-data-upload.component.html
+++ b/projects/web/src/app/common/json-data-upload/json-data-upload.component.html
@@ -2,7 +2,7 @@
 @if (user.privileges['app_json_data.create']) {
   <button type="button" nz-button [nzType]="buttonType()" [nzSize]="buttonSize()"
     [nzShape]="buttonShape()" (click)="chooseFile()">
-     <svg-icon [class]="iconClass()" [iconPath]="iconPath()" />
+     <nz-icon [class]="iconClass()" [nzType]="iconPath()" />
     {{buttonText()}}
   </button>
   <input class="d-none" type="file" #fileInput [accept]="accept()"
