refactor to use antd modules

--- a/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.css
+++ b/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.css
@@ -16,6 +16,11 @@
   height: 36px;
 }
 
+.logo-icon nz-icon ::ng-deep svg {
+  width: 1.5rem;
+  height: 1.5rem;
+}
+
 .logo-title {
   opacity: 0;
   height: 36px;
