--- a/projects/web/src/app/common/storage-browser/storage-browser.component.css
+++ b/projects/web/src/app/common/storage-browser/storage-browser.component.css
@@ -12,6 +12,11 @@
   height: 120px;
 }
 
+.folder-item nz-icon.icon-2x ::ng-deep svg {
+  width: 2rem;
+  height: 2rem;
+}
+
 .folder-item-name {
   font-size: .825rem;;
 }
