refactor to use antd modules

--- a/projects/web/src/app/login/login/login.component.html
+++ b/projects/web/src/app/login/login/login.component.html
@@ -43,7 +43,7 @@
                 [disabled]="(!loginForm.valid) || loading()"
                 type="button" (click)="login()">
                 @if (loading()) {
-                  <svg-icon iconPath="bi/arrow-repeat" iconClass="bi-spin" /> 登录中 ...
+                  <nz-icon nzType="sync" [nzSpin]="true" /> 登录中 ...
                 } @else {
                   登录
                 }
