--- a/projects/web/src/app/account/token-detail/token-detail.component.html
+++ b/projects/web/src/app/account/token-detail/token-detail.component.html
@@ -104,7 +104,7 @@
             <ng-template #delUrlTpl>
               <button class="px-2" type="button" nz-button nzType="default"
                 (click)="removeTokenUrl(url)" nz-tooltip="点击删除这个地址">
-                <nz-icon class="clickable" nzType="bi:x" />
+                <nz-icon class="cursor-pointer" nzType="bi:x" />
               </button>
             </ng-template>
           </nz-input-group>
