--- a/projects/web/src/app/common/header/header.component.html
+++ b/projects/web/src/app/common/header/header.component.html
@@ -4,7 +4,7 @@
     (click)="ui.toggleSider()">
   </div>
 }
-<div class="flex-grow-1">
+<div class="grow">
   <nz-breadcrumb>
     @for (item of ui.breadcrumbs(); track item.url) {
       <nz-breadcrumb-item>
