--- a/projects/handset/src/app/login/login/login.component.html
+++ b/projects/handset/src/app/login/login/login.component.html
@@ -2,11 +2,11 @@
   登录
 </mat-toolbar>
 
-<div class="container">
-  <div class="row">
-    <div class="offset-md-4 col-md-4">
+<div class="container mx-auto">
+  <div class="flex flex-wrap">
+    <div class="md:ml-[33.333333%] md:w-1/3 w-full">
       @let _model = model();
-      <form class="login-form mt-sm-2 mt-md-3 mt-lg-4" #loginForm="ngForm">
+      <form class="login-form mt-2 md:mt-3 lg:mt-4" #loginForm="ngForm">
         <mat-form-field class="form-field">
           <input name="username" matInput type="text" placeholder="用户名"
             [(ngModel)]="_model.userName" required #username="ngModel"
