--- a/projects/web/src/app/admin/nav-items/list/list.component.html
+++ b/projects/web/src/app/admin/nav-items/list/list.component.html
@@ -1,92 +1,88 @@
 @let user = account.current();
-<div class="container-fluid">
-  <div class="row">
-    <div class="col">
-      <nz-card class="ant-card-data-list" nzTitle="导航菜单" [nzExtra]="cardExtra">
-        <ng-template #cardExtra>
-          <nz-space-compact>
-            @if (user.privileges['app_nav_items.create']) {
-              <button type="button" nz-button nzType="primary"
-                (click)="showDetail('0', true)">
-                <nz-icon nzType="plus" /> 新建菜单项
-              </button>
-            }
-            <button type="button" nz-button nzType="default"
-              (click)="loadData({})">
-              <nz-icon nzType="sync" /> 刷新
-            </button>
-          </nz-space-compact>
-        </ng-template>
-        @let data = (vm.data | async)!;
-        <nz-table nzSize="small" [nzFrontPagination]="false"
-          [nzShowSizeChanger]="true"
-          [nzShowPagination]="true"
-          [nzShowQuickJumper]="true"
-          [nzData]="data"
-          [nzTotal]="(vm.total | async)!"
-          [nzShowTotal]="totalTpl"
-          [nzLoading]="vm.loading"
-          [nzPageIndex]="vm.pageIndex"
-          [nzPageSize]="vm.pageSize"
-          [nzPageSizeOptions]="vm.pageSizeOptions"
-          (nzQueryParams)="loadData($event)">
-          <thead>
-            <tr class="sticky-top">
-              <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
-              <th scope="col" class="text-start text-nowrap">标题</th>
-              <th scope="col" class="text-start text-nowrap">提示文字</th>
-              <th scope="col" class="text-start text-nowrap">图标</th>
-              <th scope="col" class="text-start text-nowrap">导航地址</th>
-              <th scope="col" class="text-center text-nowrap">顺序</th>
-              <th scope="col" class="text-center text-nowrap table-action-col-3">操作</th>
-            </tr>
-          </thead>
-          <tbody>
-            @for (item of data; track item.id; let i = $index;) {
-              <tr>
-                <th scope="row" class="text-end">{{i+1+vm.searchModel.skip}}</th>
-                <td class='text-start'>{{item.title}}</td>
-                <td class='text-start'>{{item.tooltip}}</td>
-                <td class='text-start'>
-                  @if (item.icon) {
-                    <nz-icon iconClass="bi" [nzType]="ui.toNzIconType(item.icon)" />
-                  }
-                  {{item.icon}}</td>
-                <td class='text-start'>{{item.url}}</td>
-                <td class='text-end'>{{item.sequence}}</td>
-                <td class="text-center">
-                  <nz-space-compact nzSize="small">
-                    @if (user.privileges['app_nav_items.read_by_id']) {
-                      <button type="button" nz-button
-                        nz-tooltip="详情" nzTooltipPlacement="top"
-                        (click)="showDetail(item.id, false)">
-                        <nz-icon nzType="bi:info-square" />
-                      </button>
-                    }
-                    @if (user.privileges['app_nav_items.update']) {
-                      <button type="button" nz-button
-                        nz-tooltip="编辑" nzTooltipPlacement="top"
-                        (click)="showDetail(item.id, true)">
-                        <nz-icon nzType="bi:pencil-square" />
-                      </button>
-                    }
-                    @if (user.privileges['app_nav_items.delete']) {
-                      <button type="button" nz-button
-                        nz-tooltip="删除" nzTooltipPlacement="top"
-                        (click)="delete(item.id)">
-                        <nz-icon nzType="bi:trash" />
-                      </button>
-                    }
-                  </nz-space-compact>
-                </td>
-              </tr>
-            }
-          </tbody>
-        </nz-table>
-      </nz-card>
-      <ng-template #totalTpl let-total let-range="range">
-        当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
-      </ng-template>
-    </div>
-  </div>
+<div class="w-full px-3">
+  <nz-card class="ant-card-data-list" nzTitle="导航菜单" [nzExtra]="cardExtra">
+    <ng-template #cardExtra>
+      <nz-space-compact>
+        @if (user.privileges['app_nav_items.create']) {
+          <button type="button" nz-button nzType="primary"
+            (click)="showDetail('0', true)">
+            <nz-icon nzType="plus" /> 新建菜单项
+          </button>
+        }
+        <button type="button" nz-button nzType="default"
+          (click)="loadData({})">
+          <nz-icon nzType="sync" /> 刷新
+        </button>
+      </nz-space-compact>
+    </ng-template>
+    @let data = (vm.data | async)!;
+    <nz-table nzSize="small" [nzFrontPagination]="false"
+      [nzShowSizeChanger]="true"
+      [nzShowPagination]="true"
+      [nzShowQuickJumper]="true"
+      [nzData]="data"
+      [nzTotal]="(vm.total | async)!"
+      [nzShowTotal]="totalTpl"
+      [nzLoading]="vm.loading"
+      [nzPageIndex]="vm.pageIndex"
+      [nzPageSize]="vm.pageSize"
+      [nzPageSizeOptions]="vm.pageSizeOptions"
+      (nzQueryParams)="loadData($event)">
+      <thead>
+        <tr class="sticky-top">
+          <th scope="col" class="text-end text-nowrap table-row-num-col">#</th>
+          <th scope="col" class="text-start text-nowrap">标题</th>
+          <th scope="col" class="text-start text-nowrap">提示文字</th>
+          <th scope="col" class="text-start text-nowrap">图标</th>
+          <th scope="col" class="text-start text-nowrap">导航地址</th>
+          <th scope="col" class="text-center text-nowrap">顺序</th>
+          <th scope="col" class="text-center text-nowrap table-action-col-3">操作</th>
+        </tr>
+      </thead>
+      <tbody>
+        @for (item of data; track item.id; let i = $index;) {
+          <tr>
+            <th scope="row" class="text-end">{{i+1+vm.searchModel.skip}}</th>
+            <td class='text-start'>{{item.title}}</td>
+            <td class='text-start'>{{item.tooltip}}</td>
+            <td class='text-start'>
+              @if (item.icon) {
+                <nz-icon iconClass="bi" [nzType]="ui.toNzIconType(item.icon)" />
+              }
+              {{item.icon}}</td>
+            <td class='text-start'>{{item.url}}</td>
+            <td class='text-end'>{{item.sequence}}</td>
+            <td class="text-center">
+              <nz-space-compact nzSize="small">
+                @if (user.privileges['app_nav_items.read_by_id']) {
+                  <button type="button" nz-button
+                    nz-tooltip="详情" nzTooltipPlacement="top"
+                    (click)="showDetail(item.id, false)">
+                    <nz-icon nzType="bi:info-square" />
+                  </button>
+                }
+                @if (user.privileges['app_nav_items.update']) {
+                  <button type="button" nz-button
+                    nz-tooltip="编辑" nzTooltipPlacement="top"
+                    (click)="showDetail(item.id, true)">
+                    <nz-icon nzType="bi:pencil-square" />
+                  </button>
+                }
+                @if (user.privileges['app_nav_items.delete']) {
+                  <button type="button" nz-button
+                    nz-tooltip="删除" nzTooltipPlacement="top"
+                    (click)="delete(item.id)">
+                    <nz-icon nzType="bi:trash" />
+                  </button>
+                }
+              </nz-space-compact>
+            </td>
+          </tr>
+        }
+      </tbody>
+    </nz-table>
+  </nz-card>
+  <ng-template #totalTpl let-total let-range="range">
+    当前显示 {{total}} 条记录中的第 {{range[0]}} 至 {{range[1]}} 条
+  </ng-template>
 </div>
