--- a/projects/web/src/app/admin/users/detail/detail.component.html
+++ b/projects/web/src/app/admin/users/detail/detail.component.html
@@ -158,14 +158,14 @@
   </form>
   <ng-template #okTpl>
     @if (user.privileges['app_users.update'] && params.editable) {
-      <button class="float-start ms-4" type="button" nz-button nzType="primary"
+      <button class="float-start ms-4!" type="button" nz-button nzType="primary"
         (click)="save()" [disabled]="!detailForm.valid">
         <nz-icon class="me-1" nzType="check" /> 保存
       </button>
     }
   </ng-template>
   <ng-template #cancelTpl>
-    <button class="float-end me-4" type="button" nz-button nzType="default" (click)="cancel()">
+    <button class="float-end me-4!" type="button" nz-button nzType="default" (click)="cancel()">
       <nz-icon class="me-1" nzType="close" /> 取消
     </button>
   </ng-template>
