--- a/projects/web/src/app/home/home/home.component.html
+++ b/projects/web/src/app/home/home/home.component.html
@@ -1,6 +1,6 @@
-<div class="container p-5">
+<div class="container mx-auto p-5">
 
-  <div class="d-grid gap-2">
+  <div class="grid gap-2">
     <button nz-button nzType="default" nzSize="large"
       (click)="vm.updateMessage()">
       {{vm.message()}}
