--- a/projects/web/src/app/login/login/login.component.css
+++ b/projects/web/src/app/login/login/login.component.css
@@ -6,13 +6,15 @@
   display: flex;
   align-items: center;
   justify-items: center;
-  background-color: var(--bs-light)
+  background-color: #f8f9fa;
 }
 
-.col-login {
+.login {
   max-width: 24rem;
 }
 
 .captcha-item ::ng-deep span.ant-input-group-addon {
   padding: 0 0 !important;
+  width: 118px;
+  height: 38px;
 }
