--- a/projects/web/src/app/login/login/login.component.html
+++ b/projects/web/src/app/login/login/login.component.html
@@ -1,65 +1,63 @@
-<div class="container mx-auto">
-  <div class="flex flex-wrap">
-    <div class="login mx-auto">
-      <nz-card nzTitle="登录您的账户">
-        @if (ui.showLoginForm()) {
-          @let _model = model();
-          <form nz-form nzLayout="vertical" #loginForm="ngForm" (submit)="login()" method="post">
-            <nz-form-item>
-              <nz-form-label nzFor="username" nzRequired>用户名</nz-form-label>
-              <nz-form-control [nzHasFeedback]="true">
-                <input nz-input nzSize="large" type="text" id="username" name="username"
-                  placeholder="请输入用户名 ..." [(ngModel)]="_model.userName"
-                  required autocomplete="username"
+<div class="w-full">
+  <div class="flex justify-content-center align-items-center">
+    <nz-card class="login mx-auto!" nzTitle="登录您的账户">
+      @if (ui.showLoginForm()) {
+        @let _model = model();
+        <form nz-form nzLayout="vertical" #loginForm="ngForm" (submit)="login()" method="post">
+          <nz-form-item>
+            <nz-form-label nzFor="username" nzRequired>用户名</nz-form-label>
+            <nz-form-control [nzHasFeedback]="true">
+              <input nz-input nzSize="large" type="text" id="username" name="username"
+                placeholder="请输入用户名 ..." [(ngModel)]="_model.userName"
+                required autocomplete="username"
+              />
+            </nz-form-control>
+          </nz-form-item>
+          <nz-form-item>
+            <nz-form-label nzFor="password" nzRequired>密码</nz-form-label>
+            <nz-form-control [nzHasFeedback]="true">
+              <input nz-input nzSize="large" type="password" name="password"
+                placeholder="请输入密码 ..." required id="password"
+                [(ngModel)]="_model.password" autocomplete="new-password"
+              />
+            </nz-form-control>
+          </nz-form-item>
+          <nz-form-item class="captcha-item">
+            <nz-form-label nzFor="captcha" nzRequired>验证码</nz-form-label>
+            <nz-form-control [nzHasFeedback]="true">
+              <nz-input-group [nzAddOnAfter]="captchaImageTpl" nzSize="large">
+                <input nz-input nzSize="large" id="captcha" name="captcha"
+                  [(ngModel)]="_model.captcha" placeholder="请输入验证码..." required
+                  (keyup)="passwordKeyUp($event, loginForm)"
                 />
-              </nz-form-control>
-            </nz-form-item>
-            <nz-form-item>
-              <nz-form-label nzFor="password" nzRequired>密码</nz-form-label>
-              <nz-form-control [nzHasFeedback]="true">
-                <input nz-input nzSize="large" type="password" name="password"
-                  placeholder="请输入密码 ..." required id="password"
-                  [(ngModel)]="_model.password" autocomplete="new-password"
-                />
-              </nz-form-control>
-            </nz-form-item>
-            <nz-form-item class="captcha-item">
-              <nz-form-label nzFor="captcha" nzRequired>验证码</nz-form-label>
-              <nz-form-control [nzHasFeedback]="true">
-                <nz-input-group [nzAddOnAfter]="captchaImageTpl" nzSize="large">
-                  <input nz-input nzSize="large" id="captcha" name="captcha"
-                    [(ngModel)]="_model.captcha" placeholder="请输入验证码..." required
-                    (keyup)="passwordKeyUp($event, loginForm)"
-                  />
-                </nz-input-group>
-                <ng-template #captchaImageTpl>
-                  <img class="cursor-pointer" [src]="captchaImageUrl()" alt="点击刷新验证码"
-                    (click)="updateCaptcha()" nz-tooltip="点击刷新验证码" />
-                </ng-template>
-              </nz-form-control>
-            </nz-form-item>
-            <nz-form-item>
-              <button nz-button nzType="primary" nzSize="large" nzBlock
-                [disabled]="(!loginForm.valid) || loading()"
-                type="button" (click)="login()">
-                @if (loading()) {
-                  <nz-icon nzType="sync" [nzSpin]="true" /> 登录中 ...
-                } @else {
-                  登录
-                }
-              </button>
-            </nz-form-item>
-            @let msg = message();
-            @if (msg) {
-              <nz-alert class="login-error-alert" nzType="error"
-                [nzCloseable]="true" (nzOnClose)="clearMessage()"
-                [nzShowIcon]="true"
-                [nzMessage]="msg">
-              </nz-alert>
-            }
-          </form>
-        }
-      </nz-card>
-    </div>
+              </nz-input-group>
+              <ng-template #captchaImageTpl>
+                <img class="cursor-pointer" [src]="captchaImageUrl()" alt="点击刷新验证码"
+                  (click)="updateCaptcha()" nz-tooltip="点击刷新验证码" />
+              </ng-template>
+            </nz-form-control>
+          </nz-form-item>
+          <nz-form-item>
+            <button nz-button nzType="primary" nzSize="large" nzBlock
+              [disabled]="(!loginForm.valid) || loading()"
+              type="button" (click)="login()">
+              @if (loading()) {
+                <nz-icon nzType="sync" [nzSpin]="true" /> 登录中 ...
+              } @else {
+                登录
+              }
+            </button>
+          </nz-form-item>
+          @let msg = message();
+          @if (msg) {
+            <nz-alert class="login-error-alert" nzType="error"
+              [nzCloseable]="true" (nzOnClose)="clearMessage()"
+              [nzShowIcon]="true"
+              [nzMessage]="msg">
+            </nz-alert>
+          }
+        </form>
+      }
+    </nz-card>
   </div>
 </div>
