--- a/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.css
+++ b/projects/web/src/app/common/nav-sidebar-antd/nav-sidebar-antd.component.css
@@ -5,12 +5,12 @@
 }
 
 .logo {
-  height: 72px;
-  padding: 16px 16px;
+  height: 4.5rem;
+  padding: 1rem 1rem;
 }
 
 .logo-icon {
-  padding: 8px 4px 8px 12px;
+  padding: 0.25rem 0.25rem 0.5rem 0.75rem;
   line-height: 2.25rem;
   width: 2.25rem;
   height: 2.25rem;
@@ -23,6 +23,7 @@
 
 .logo-title {
   opacity: 0;
+  padding-top: 0.25rem;
   height: 2.25rem;
   animation-name: fadeInOpacity;
   animation-iteration-count: 1;
