--- a/projects/web/src/styles.css
+++ b/projects/web/src/styles.css
@@ -51,6 +51,12 @@ html, body {
   overflow: hidden;
 }
 
+hr {
+  margin: 1rem 0;
+  border: none;
+  border-top: 1px solid #d9d9d9;
+}
+
 #app-root {
   display: block;
   width: 100%; height: 100%;
