--- a/projects/web/src/app/admin/roles/privilege/privilege.component.html
+++ b/projects/web/src/app/admin/roles/privilege/privilege.component.html
@@ -2,7 +2,7 @@
   [nzTitle]="params.title" [nzExtra]="toolsTpl">
   <ng-template #toolsTpl>
     <nz-space-compact nzSize="small">
-      <button type="button" nz-button nzType="default" (click)="close()">
+      <button type="button" nz-button nzType="primary" (click)="close()">
         <nz-icon nzType="check" /> 确定
       </button>
     </nz-space-compact>
@@ -10,10 +10,10 @@
   <form nz-form nzLayout="vertical" #privilegeForm="ngForm">
     @for (mp of vm.privileges; track mp.module) {
       <nz-form-item class="mb-2 p-0">
-        <nz-form-label class="fs-6 fw-bolder">{{mp.module}}</nz-form-label>
-        <nz-form-control>
+        <nz-form-label class="text-xl font-bold">{{mp.module}}</nz-form-label>
+        <nz-form-control class="ps-3!">
           @for (p of mp.privileges; track p.id) {
-            <label class="m-0" [for]="p.id" nz-checkbox [nzValue]="p.name"
+            <label class="ms-0!" [for]="p.id" nz-checkbox [nzValue]="p.name"
               [nzChecked]="vm.rolePrivileges[p.name]"
               (nzCheckedChange)="togglePrivilege(p.name)">
               {{p.description || p.name}}
